test/parallel/forall/checks/with-false.good
with-false.chpl:3: syntax error: near 'false'
with-false.chpl:3: syntax error: invalid intent expression in 'with' clause
